// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render game field by default 1`] = `
<DocumentFragment>
  <div
    class="css-1gexv9m"
  >
    <div
      class="css-d2q1pa"
    >
      0
    </div>
    <select
      class="css-55qvia"
    >
      <option
        class="css-zcmdxr"
        value="beginner"
      >
        beginner
      </option>
      <option
        class="css-zcmdxr"
        value="intermediate"
      >
        intermediate
      </option>
      <option
        class="css-zcmdxr"
        value="expert"
      >
        expert
      </option>
    </select>
    <button
      class="css-1bva717"
    >
      🙂
    </button>
    <div
      class="css-d2q1pa"
    >
      9
    </div>
  </div>
  <div
    class="css-1ye5yxo"
    role="grid"
    size="9"
  >
    <div
      class="css-1v5gl4b"
      data-testid="0,0"
      role="cell"
    >
      <div
        class="css-1a8jebs"
      />
      <div
        class="css-1a8jebs"
        data-testid="flag_0,0"
      >
        11
      </div>
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,8"
      role="cell"
    >
      10
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render game field by default 2`] = `
<DocumentFragment>
  <div
    class="css-1gexv9m"
  >
    <div
      class="css-d2q1pa"
    >
      0
    </div>
    <select
      class="css-55qvia"
    >
      <option
        class="css-zcmdxr"
        value="beginner"
      >
        beginner
      </option>
      <option
        class="css-zcmdxr"
        value="intermediate"
      >
        intermediate
      </option>
      <option
        class="css-zcmdxr"
        value="expert"
      >
        expert
      </option>
    </select>
    <button
      class="css-1bva717"
    >
      🙂
    </button>
    <div
      class="css-d2q1pa"
    >
      8
    </div>
  </div>
  <div
    class="css-1ye5yxo"
    role="grid"
    size="9"
  >
    <div
      class="css-1v5gl4b"
      data-testid="0,0"
      role="cell"
    >
      <div
        class="css-1a8jebs"
      />
      <div
        class="css-1a8jebs"
        data-testid="flag_0,0"
      >
        11
      </div>
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="0,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="1,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="2,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="3,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="4,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="5,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="6,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="7,8"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,0"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,1"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,2"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,3"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,4"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,5"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,6"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,7"
      role="cell"
    >
      10
    </div>
    <div
      class="css-1v5gl4b"
      data-testid="8,8"
      role="cell"
    >
      <div
        class="css-1a8jebs"
      />
      <div
        class="css-1a8jebs"
        data-testid="flag_8,8"
      >
        11
      </div>
    </div>
  </div>
</DocumentFragment>
`;
